--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
       <!--Header nav-->
       <div class="header-nav">
-        <a href="#" class="logo">Abdullajon Sayidov</a>
+        <a href="#" class="logo">Abdullajon</a>
         <nav class="nav">
           <ul class="nav-list">
             <li class="nav-item"><a href="#!" class="nav-link active">Home</a></li>
@@ -26,6 +26,18 @@
             <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
           </ul>
         </nav>
+      </div>
+      <!-- Header content -->
+      <div class="header-row">
+        <div class="header-content">
+          <h1 class="header-heading">Abdullajon Sayidov <br> Designer & Developer</h1>
+          <p>I’m a portrait, fashion and lifestyle photographer living In New York City. During my thirteen year tenure
+            here.</p>
+        </div>
+        <div class="header-img">
+          <img src="./img/header/hero.png" alt="">
+        </div>
+
       </div>
 
     </div>
