--- a/index.html
+++ b/index.html
@@ -43,6 +43,29 @@
     </div>
   </header>
 
+  <section class="services">
+    <div class="container">
+      <div class="services-row">
+        <div class="servise-card">
+          <img class="service-card-img" src="./img/services/01.svg" alt="UI/UX Design">
+          <h3 class="service-card-title">UI/UX Design</h3>
+          <p>Our design is translated into comprehensive digital environments built on latest development standards.</p>
+        </div>
+
+        <div class="servise-card">
+          <img class="service-card-img" src="./img/services/02.svg" alt="Development">
+          <h3 class="service-card-title">Development</h3>
+          <p>Our design is translated into comprehensive digital environments built on latest development standards.</p>
+        </div>
+
+        <div class="service-card">
+          <img class="service-card-img" src="./img/services/03.svg" alt="software testing">
+          <h3 class="service-card-title">software testing</h3>
+          <p>Our design is translated into comprehensive digital environments built on latest development standards.</p>
+        </div>
+      </div>
+    </div>
+  </section>
 
 
 
