--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     </div>
   </header>
-
+  <!-- service -->
   <section class="services">
     <div class="container">
       <div class="services-row">
@@ -67,7 +67,30 @@
     </div>
   </section>
 
+  <!-- Portfolio -->
+  <section class="portfolio">
+    <div class="container">
+      <div class="portfolio-title">
+        <h2 class="title-1">Portfolio</h2>
 
+      </div>
+      <div class="project">
+        <img src="./img/portfolio/01.jpg" alt="Online fashion store" class="poject">
+        <h3 class="project-title"><a href="#">Online fashion store - Homepage</a></h3>
+      </div>
+
+      <div class="project">
+        <img src="./img/portfolio/02.jpg" alt="Reebok Store - Concept" class="poject">
+        <h3 class="project-title"><a href="#">Reebok Store - Concept</a></h3>
+      </div>
+
+      <div class="project">
+        <img src="./img/portfolio/03.jpg" alt="Braun Landing Page - Concept" class="poject">
+        <h3 class="project-title"><a href="#">Braun Landing Page - Concept</a></h3>
+
+      </div>
+    </div>
+  </section>
 
 
   <script src="./js/main.js"></script>
