--- a/index.html
+++ b/index.html
@@ -75,17 +75,17 @@
 
       </div>
       <div class="project">
-        <img src="./img/portfolio/01.jpg" alt="Online fashion store" class="poject">
+        <img src="./img/portfolio/01.jpg" alt="Online fashion store" class="poject-img">
         <h3 class="project-title"><a href="#">Online fashion store - Homepage</a></h3>
       </div>
 
       <div class="project">
-        <img src="./img/portfolio/02.jpg" alt="Reebok Store - Concept" class="poject">
+        <img src="./img/portfolio/02.jpg" alt="Reebok Store - Concept" class="poject-img">
         <h3 class="project-title"><a href="#">Reebok Store - Concept</a></h3>
       </div>
 
       <div class="project">
-        <img src="./img/portfolio/03.jpg" alt="Braun Landing Page - Concept" class="poject">
+        <img src="./img/portfolio/03.jpg" alt="Braun Landing Page - Concept" class="poject-img">
         <h3 class="project-title"><a href="#">Braun Landing Page - Concept</a></h3>
 
       </div>
