changed heding title

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <!-- Header content -->
       <div class="header-row">
         <div class="header-content">
-          <h1 class="header-heading">Abdullajon Sayidov <br> Designer & Developer</h1>
+          <h1 class="header-heading">Abdullajon Sayidov <br> IT & Frontend Developer</h1>
           <p>I’m a portrait, fashion and lifestyle photographer living In New York City. During my thirteen year tenure
             here.</p>
         </div>
