--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <!--Header nav-->
       <div class="header-nav">
         <a href="#" class="logo">Abdullajon</a>
-        <nav class="nav">
+        <nav id="nav" class="nav">
           <ul class="nav-list">
             <li class="nav-item"><a href="#!" class="nav-link active">Home</a></li>
             <li class="nav-item"><a href="#" class="nav-link">Works</a></li>
@@ -25,6 +25,9 @@
             <li class="nav-item"><a href="#" class="nav-link">About</a></li>
             <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
           </ul>
+          <button onclick="navchange()" class="nav-button">
+            <img id="nav-btn-img" src="./img/icons/nav-open.svg" alt="Nav button">
+          </button>
         </nav>
       </div>
       <!-- Header content -->
