finished adaptive headimg

--- a/index.html
+++ b/index.html
@@ -33,12 +33,16 @@
       <!-- Header content -->
       <div class="header-row">
         <div class="header-content">
-          <h1 class="header-heading">Abdullajon Sayidov <br> IT & Frontend Developer</h1>
+          <h1 class="header-heading">Abdullajon Sayidov <br> <span>IT & Frontend Developer</span> </h1>
           <p>I’m a portrait, fashion and lifestyle photographer living In New York City. During my thirteen year tenure
             here.</p>
         </div>
         <div class="header-img">
-          <img src="./img/header/hero.png" alt="">
+          <picture>
+            <source media="(max-width:799px)" srcset="./img/header/hero_mobile.png">
+            <img src="./img/header/hero.png" alt="">
+          </picture>
+
         </div>
 
       </div>
