--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/main.css">
   <link rel="stylesheet" href="./css/media.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css"
+    integrity="sha512-1cK78a1o+ht2JcaW6g8OXYwqpev9+6GqOkz9xmBN9iUUhIndKtxwILGWYOSibOKjLsEdjyjZvYDq/cZwNeak0w=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>My Portfolio</title>
 </head>
 
@@ -32,12 +35,12 @@
       </div>
       <!-- Header content -->
       <div class="header-row">
-        <div class="header-content">
+        <div class="header-content" data-aos="fade-up">
           <h1 class="header-heading">Abdullajon Sayidov <br> <span>IT & Frontend Developer</span> </h1>
           <p>I’m a portrait, fashion and lifestyle photographer living In New York City. During my thirteen year tenure
             here.</p>
         </div>
-        <div class="header-img">
+        <div class="header-img" data-aos="fade-left">
           <picture>
             <source media="(max-width:799px)" srcset="./img/header/hero_mobile.png">
             <img src="./img/header/hero.png" alt="">
@@ -53,19 +56,19 @@
   <section class="services">
     <div class="container">
       <div class="services-row">
-        <div class="service-card">
+        <div class="service-card" data-aos="fade-down">
           <img class="service-card-img" src="./img/services/01.svg" alt="UI/UX Design">
           <h3 class="service-card-title">UI/UX Design</h3>
           <p>Our design is translated into comprehensive digital environments built on latest development standards.</p>
         </div>
 
-        <div class="service-card">
+        <div class="service-card" data-aos="fade-down">
           <img class="service-card-img" src="./img/services/02.svg" alt="Development">
           <h3 class="service-card-title">Development</h3>
           <p>Our design is translated into comprehensive digital environments built on latest development standards.</p>
         </div>
 
-        <div class="service-card">
+        <div class="service-card" data-aos="fade-down">
           <img class="service-card-img" src="./img/services/03.svg" alt="software testing">
           <h3 class="service-card-title">software testing</h3>
           <p>Our design is translated into comprehensive digital environments built on latest development standards.</p>
@@ -81,17 +84,17 @@
         <h2 class="title-1">Portfolio</h2>
 
       </div>
-      <div class="project">
+      <div class="project" data-aos="flip-up">
         <img src="./img/portfolio/01.jpg" alt="Online fashion store" class="poject-img">
         <h3 class="project-title"><a href="#">Online fashion store - Homepage</a></h3>
       </div>
 
-      <div class="project">
+      <div class="project" data-aos="flip-up">
         <img src="./img/portfolio/02.jpg" alt="Reebok Store - Concept" class="poject-img">
         <h3 class="project-title"><a href="#">Reebok Store - Concept</a></h3>
       </div>
 
-      <div class="project">
+      <div class="project" data-aos="flip-up">
         <img src="./img/portfolio/03.jpg" alt="Braun Landing Page - Concept" class="poject-img">
         <h3 class="project-title"><a href="#">Braun Landing Page - Concept</a></h3>
 
@@ -105,25 +108,30 @@
       <div class="contact-title">
         <h2 class="title-1">Contacts</h2>
       </div>
-      <div class="contacts-content">
+      <div class="contacts-content" data-aos="fade-down">
         <p>Want to know more or just chat? <br> You are welcome!</p>
       </div>
-      <div class="contacts-button">
+      <div class="contacts-button" data-aos="flip-up">
         <a href="#!" class="btn">Send message</a>
       </div>
-      <div class="contact-social">
+      <div class="contact-social" data-aos="zoom-in">
         <a href="#"><img src="./img/socials/LinkedIn.svg" alt="LinkedIn"></a>
         <a href="#"><img src="./img/socials/Instargam.svg" alt="Instargam"></a>
         <a href="#"><img src="./img/socials/Behance.svg" alt="Behance"></a>
         <a href="#"><img src="./img/socials/Dribble.svg" alt="Dribble"></a>
       </div>
-      <div class="contacts-footer">
+      <div class="contacts-footer" data-aos="fade-up">
         <p>Like me on <br>
           LinkedIn, Instagram, Behance, Dribble</p>
       </div>
 
     </div>
   </footer>
+
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"
+    integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
   <script src="./js/main.js"></script>
 </body>
