--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li class="nav-item"><a href="#" class="nav-link">About</a></li>
             <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
           </ul>
-          <button onclick="navchange()" class="nav-button">
+          <button id="navbtn" class="nav-button">
             <img id="nav-btn-img" src="./img/icons/nav-open.svg" alt="Nav button">
           </button>
         </nav>
