--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container">
       <!--Header nav-->
       <div class="header-nav">
-        <a href="#" class="logo">Abdullajon</a>
+        <a href="#" class="logo">Kelvin</a>
         <nav id="nav" class="nav">
           <ul class="nav-list">
             <li class="nav-item"><a href="#!" class="nav-link active">Home</a></li>
@@ -36,7 +36,7 @@
       <!-- Header content -->
       <div class="header-row">
         <div class="header-content" data-aos="fade-up">
-          <h1 class="header-heading">Abdullajon Sayidov <br> <span>IT & Frontend Developer</span> </h1>
+          <h1 class="header-heading">Kelvin Kramer <br> <span>Designer & Developer</span> </h1>
           <p>I’m a portrait, fashion and lifestyle photographer living In New York City. During my thirteen year tenure
             here.</p>
         </div>
